[package]
name = "clap-derive"
description = "Custom Derive procedural macros for clap"
version = "0.0.6"
authors = [
	"hoverbear <andrew@hoverbear.org>",
	"Guillaume Pinot <texitoi@texitoi.eu>",
	"Kevin K. <kbknapp@gmail.com>"
]
license = "MIT/Apache-2.0"
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
keywords = ["macro", "clap", "command-line", "structopt", "derive"]
readme = "README.md"
repository = "https://github.com/kbknapp/clap-derive"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "https://github.com/kbknapp/clap-derive" }
appveyor = { repository = "https://github.com/kbknapp/clap-derive", service = "github" }

[dependencies]
clap = {version = "2", features = ["unstable"]}
quote = "*"
syn = "*"
error-chain = "*"
clippy    = { version = "~0.0.174", optional = true }

[dev-dependencies]

[features]
default     = []
unstable    = [] # for building with unstable clap features (doesn't require nightly Rust)
nightly     = [] # for building with unstable Rust features
lints       = ["clippy"] # Requires nightly Rust

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[package.metadata.docs.rs]
features = ["doc"]
