[package]
name = "clap_derive"
version = "0.3.0"
authors = [
    "Guillaume Pinot <texitoi@texitoi.eu>",
    "Kevin K. <kbknapp@gmail.com>",
    "hoverbear <andrew@hoverbear.org>"
]
description = "Parse command line argument by defining a struct, derive crate."
documentation = "https://docs.rs/clap_derive"
repository = "https://github.com/clap-rs/clap_derive"
keywords = ["clap", "cli", "derive", "proc_macro", "parse"]
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
license = "Apache-2.0/MIT"
readme = "README.md"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "clap-rs/clap_derive" }
appveyor = { repository = "https://github.com/clap-rs/clap_derive", service = "github" }

[dependencies]
syn = { version = "0.15.39", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
heck = "^0.3.0"
clippy = {version = "0.0.174", optional = true }

[dev-dependencies]
clap = { git = "https://github.com/clap-rs/clap", branch = "master"} # ONLY FOR INITIAL DEVELOPMENT...change to real crates.io ver for rlease!
trybuild = "1.0.5"

[features]
default = []
nightly = []
lints = ["clippy"]
debug = []
doc = []
